se consigue problema de lectura de parametros en la url , pero cuando se inicia la pagina no muestra ninguna llave ni valor en la url.

--- a/client/index.html
+++ b/client/index.html
@@ -33,10 +33,10 @@
                             <select name="description" id="description" required></select>
                         </div>
                         <div class="container">
-                            <label for="">Rutina de trabajo</label>
+                            <label for="workroutine">Rutina de trabajo</label>
                             <select name="workroutine" id="workroutine" required></select>
-                            <label for="">Asignada a:</label>
-                            <select name="" id="assigned" required></select>
+                            <label for="assigned">Asignada a:</label>
+                            <select name="assigned" id="assigned" required></select>
                         </div>
                         <div class="container">
                             <label for="">Averia reportada</label>
