se crea las paginas para ver los reportes  por nombre del reportero , se crea modelo de peticon al servidor , controlador y ruta para esto, se crea las paginas para hacer lo mismo para consultar por maquina y por fecha queda pendiente realizar controles para esto.

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,10 @@
             </div>
             <div class="subMain">
                 <div>
-                    <button>lista</button>
+                    <h2> Lista de reportes </h2>
+                    <a href="./listReport/listReports.html">Por reportero</a>
+                    <a href="">Por maquina</a>
+                    <a href="">Por fecha</a>
                 </div>
                 <div class="containerAForm">
                     <form action="" class="containerForm" id="formdata">
