se realiza modelo,control y ruta para manejar la informacion de los reportes por descripcion de maquina se crea el html y control pra visualizar los reportes

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
                 <div>
                     <h2> Lista de reportes </h2>
                     <a href="./listReport/listReports.html">Por reportero</a>
-                    <a href="">Por maquina</a>
+                    <a href="./listReport/listMachine.html">Por maquina</a>
                     <a href="">Por fecha</a>
                 </div>
                 <div class="containerAForm">
