se realiza la ruta, modelo y control para pedir los reportes por el numero de orden, se crea el control para visualizar los reportes, se crea botones a los reporte tanto por reportero, por descripcion y por orden para poder programa la impresion de los reportes.

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
                     <h2> Lista de reportes </h2>
                     <a href="./listReport/listReports.html">Por reportero</a>
                     <a href="./listReport/listMachine.html">Por maquina</a>
-                    <a href="">Por fecha</a>
+                    <a href="./listReport/listOrder.html">Por numero de orden</a>
                 </div>
                 <div class="containerAForm">
                     <form action="" class="containerForm" id="formdata">
