se crea una funcion para tomar los datos que tenga el button y mostralos para poderlos imprimir, en los modelos se pide que devuelvan todo el reporte cuando sea requerido por orden , por descripcion o por reportero

--- a/client/listReport/listMachine.html
+++ b/client/listReport/listMachine.html
@@ -17,7 +17,7 @@
         </div>
         <div id="list"></div>
     </main>
-    <script src="../controllersReports/listMachine.js"></script>
+    <script type="module" src="../controllersReports/listMachine.js"></script>
 </body>
 
 </html>
