--- a/client/listReport/listOrder.html
+++ b/client/listReport/listOrder.html
@@ -17,7 +17,7 @@
         </div>
         <div id="list"></div>
     </main>
-    <script src="../controllersReports/listOrder.js"></script>
+    <script type="module" src="../controllersReports/listOrder.js"></script>
 </body>
 
 </html>
