--- a/client/listReport/listReports.html
+++ b/client/listReport/listReports.html
@@ -15,6 +15,8 @@
         </div>
         <div id="list"></div>
     </main>
-    <script src="../controllersReports/listReports.js"></script>
+    <script type="module" src="../controllersReports/listReports.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </body>
 </html>
