se consigue la novedad que el campo de rutina_trabajo no se estaba incluyendo en la peticion de datos y muestra del mismo se agrehga en el modelo y en el control de reporte por reprotero queda pendiente agregar a los demas controles, se termina los controles de modificacion de reporte.

--- a/client/listReport/listReports.html
+++ b/client/listReport/listReports.html
@@ -10,7 +10,7 @@
             <form action="">
                 <label for="reports">Ingrese nombre del reportero</label>
                 <select id="reports" name="reports" placeholder="Nombre de reportero" required></select>
-                <button>Ingreso</button>
+                <button id="buttonInp">Ingreso</button>
             </form>
         </div>
         <div id="list"></div>
