se modifica el iscript principal pasando  como funcion asincrona la peticion de enviar los datos a guardar registro y se le agrega la opcion que si todo ske bien recargue la pagina. Se coloca en los controladores de lista la opcion que al modificar elimine algun formulario existente. Se corrige error en listMachine al realizar peticion de de modificacion( no extaba importando el archivo updateReport )

--- a/client/index.html
+++ b/client/index.html
@@ -17,8 +17,8 @@
                 </div>
             </div>
             <div class="subMain">
-                <div>
-                    <h2> Lista de reportes </h2>
+                <div id="list">
+                    <h2> Lista de reportes matfilm </h2>
                     <a href="./listReport/listReports.html">Por reportero</a>
                     <a href="./listReport/listMachine.html">Por maquina</a>
                     <a href="./listReport/listOrder.html">Por numero de orden</a>
@@ -54,7 +54,7 @@
                             <input type="text" name="comment" id="comment">
                         </div>
                         <div class="container">
-                        <input type="submit" value="Reportar">
+                        <input type="submit" value="Reportar" id="submit">
                         </div>
                     </form>
 
